# chat-udp

./: CMakeLists.txt  README.md
client/: mainwindow.cpp  mainwindow.ui
common/: protocol.h
server/: server.cpp
src/client/: CMakeLists.txt  client.cpp  client.h  main.cpp  mainwindow.h
src/server/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  server.h
